Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-117745

Warning message from app compiled with XCode 15

XMLWordPrintable

    • macOS
    • fc1549c01 (dev), 546dae928 (6.6), f3911f8f2 (6.5), 57921a3a2 (tqtc/lts-6.2)

      Since compiling using XCode 15 on Mac OSX 14.0 (Sonoma), all Qt apps print the following message to the terminal, and should not:
      WARNING: Secure coding is
      automatically enabled for restorable state! However, not on all
      supported macOS versions of this application. Opt-in to secure coding
      explicitly by implementing
      NSApplicationDelegate.applicationSupportsSecureRestorableState:.

        For Gerrit Dashboard: QTBUG-117745
        # Subject Branch Project Status CR V

            vestbo Tor Arne Vestbø
            keithsabine Keith Sabine
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: